--- a/ansible_hosts.yml
+++ b/ansible_hosts.yml
@@ -3,10 +3,10 @@ all:
     blockchain:
       hosts:
         node1: 
-          ansible_host: 172.31.39.186
+          ansible_host: 172.31.39.186 # Change for your host IP
         node2: 
-          ansible_host: 172.31.40.165
+          ansible_host: 172.31.40.165 # Change for your host IP
       vars:
         ansible_python_interpreter: /usr/bin/python3 
-        ansible_ssh_private_key_file: ~/.ssh/kp_qa_oregon.pem
-        ansible_user: ubuntu 
+        ansible_ssh_private_key_file: ~/.ssh/kp_qa_oregon.pem # Change for your own .pem file
+        ansible_user: ubuntu # Change for your Linux user
